--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.12.1",
-    "patchright": "^1.52.4"
+    "patchright": "^1.52.4",
+    "zod": "^3.25.76"
   }
 }
