--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,14 +3,14 @@
     // Environment setup & latest features
     "lib": ["ES2022", "DOM"],
     "target": "ES2022",
-    "module": "ESNext",
+    "module": "Node16",
     "moduleDetection": "force",
     "jsx": "react-jsx",
     "allowJs": true,
     "types": ["jest", "node"],
 
     // Node.js mode
-    "moduleResolution": "node",
+    "moduleResolution": "node16",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
