--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "typescript": "^5.6.2"
   },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.12.1",
+    "@modelcontextprotocol/sdk": "1.18.2",
     "patchright": "^1.52.4",
     "zod": "^3.25.76"
   }
