fix: update project name from 'mcp_scraper_analytics' to 'mcp-scraper-aio' in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mcp_scraper_analytics",
+  "name": "mcp-scraper-aio",
   "type": "module",
   "private": true,
   "main": "dist/index.js",
